<resources>
    <string name="app_name">Calculator App</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="sub">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="add">+</string>
    <string name="result_text">Result Text</string>
    <string name="value">This value for the text as string res</string>
    <string name="square_root_symbol">\u221A</string>
    <string name="per">%</string>
    <string name="stringdiv">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">c</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
</resources>