<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tv_display"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15dp"
        android:textColor="@color/black"
         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btn_one"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/btn_two"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_three"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_four"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/btn_five"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_six"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_sub"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/sub"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/btn_seven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_eight"
            android:text="@string/_8"
            android:textSize="20sp"
            android:backgroundTint="@color/Moccasin"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_nine"
            android:text="@string/_9"
            android:textSize="20sp"
            android:backgroundTint="@color/Moccasin"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_multi"
            android:text="@string/multi"
            android:textSize="20sp"
            android:backgroundTint="@color/Moccasin"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/btn_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Moccasin"
            android:text="@string/c"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_zero"
            android:text="@string/_0"
            android:textSize="20sp"
            android:backgroundTint="@color/Moccasin"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_equal"
            android:text="@string/equals"
            android:textSize="20sp"
            android:backgroundTint="@color/Moccasin"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_div"
            android:text="@string/div"
            android:textSize="20sp"
            android:backgroundTint="@color/Moccasin"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btn_advance"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Red"
            android:text="Advance - With History"
            android:textColor="@color/black"
            android:textSize="20sp" />


    <Button
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_standard"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Pink"
        android:text="Standard"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_history"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15dp"
        android:textColor="@color/black"
        />
</LinearLayout>